# Mebel_tz

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __main__.py  main.py
app/api/routes/: furniture.py  order.py
app/core/: config.py  database.py
app/crud/: furniture.py  order.py
app/models/: furniture.py  order.py
app/schemas/: furniture.py  order.py
app/service/: email_service.py
